--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Forest Camp</title>
 		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 	</head>
 	<body>
 		<div class="menu">
@@ -15,24 +16,35 @@
 				<li class="item"><a class="link" href="#galeria">Galeria</a></li>
 				<li class="item"><a class="link" href="#dojazd">Dojazd</a></li>
 			</ul>
-		</div>
-		<nav class="nav">
-			<div class="hamburger">
-				<div class="line line1"></div>
-				<div class="line line2"></div>
-				<div class="line line3"></div>
-			</div>
+			<nav class="nav">
+				<b><span id="txt1">FOREST CAMP</span></b>
+				<b><a href=""><span id="txt2">Kontakt</span></a></b>
+				<a href=""><img src="/imgs/instagram.png" alt="insta" class="inst"></a>
+				<a href=""><img src="/imgs/fb.png" alt="fb" class="fb"></a>
 
-		</nav>
+				<div class="hamburger">
+					<div class="line line1"></div>
+					<div class="line line2"></div>
+					<div class="line line3"></div>
+				</div>
+	
+			</nav>
+		</div>
 		<header class="header">
 			<div class="container">
-				<h1>Forest Camp</h1>
+				<h1>FOREST CAMP</h1>
+				<h2>WKRA&SPA</h2> <br>
+				<!-- <img src="/imgs/banner.png" alt="logo" width="600px">-->
+				<p>Widok na Wkrę z balii lub sauny, możesz to zobaczyć na własne oczy, wystarczy, że zarezerwujesz termin…</p>
+				<a href="#about"><span id="ik" class="material-symbols-outlined">
+					keyboard_double_arrow_down
+					</span></a>
 			</div>
 		</header>
 
 		<section class="section" id="about">
 			<div class="container">
-				<h2>O nas</h2>
+				<h1>O nas</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum autem enim ab voluptatibus similique quam esse, fugit consectetur, dicta, dolorum libero tempora. Accusantium molestiae qui, voluptatem cumque minus. Quisquam, quidem.</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam eius nesciunt iure, voluptate neque ducimus conconsectetur adipisicing elit. Totam eius nesciunt iure, voluptate neque ducimus conconsectetur adaxime vitae quisquam!</p>
 				<p>Labore hic, veniam itaque ex incidunt odio voluptate cupiditate numquam adipisci perferendis dignissimos aspernatur necessitatibus fuga laborum eos? Voluptatibus, nemo, aliquam. Nemo odio quidem velit animi magnam, molestias deleniti tenetur.</p>
@@ -41,7 +53,7 @@
 		</section>
 		<section class="section" id="cennik">
 			<div class="container">
-				<h2>Cennik</h2>
+				<h1>Cennik</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum autem enim ab voluptatibus similique quam esse, fugit consectetur, dicta, dolorum libero tempora. Accusantium molestiae qui, voluptatem cumque minus. Quisquam, quidem.</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus eius ipsa error eum dolores nam distinctio deleniti, temporibus, velit, labore commodi facilis fugit sapiente! Ipsum exercitationem cum sit, nisi quia.</p>
 				<p>Voluptas aperiam perferendis, at vel iure. Maiores maxime fugiat, ipsam! Dicta quos, atque velit sunt ut, suscipit eveniet sed accusamus eum vel recusandae corporis quasi consequuntur nemo reiciendis natus animi?</p>
@@ -50,7 +62,7 @@
 		</section>
 		<section class="section" id="kontakt">
 			<div class="container">
-				<h2>Kontakt</h2>
+				<h1>Kontakt</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum autem enim ab voluptatibus similique quam esse, fugit consectetur, dicta, dolorum libero tempora. Accusantium molestiae qui, voluptatem cumque minus. Quisquam, quidem.</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil in, reiciendis alias! Esse consectetur quibusdam, dicta dolorum vero totam mollitia, impedit soluta? Excepturi commodi debitis amet, possimus in illum ea?</p>
 				<p>Quaerat doloribus officia magni at quas aspernatur, omnis deserunt, ab debitis, placeat totam similique necessitatibus ducimus eligendi porro quis quibusdam. Corporis recusandae doloribus officia similique assumenda et a. Optio, est?</p>
@@ -59,7 +71,7 @@
 		</section>
 		<section class="section" id="regulamin">
 			<div class="container">
-				<h2>Regulamin</h2>
+				<h1>Regulamin</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum autem enim ab voluptatibus similique quam esse, fugit consectetur, dicta, dolorum libero tempora. Accusantium molestiae qui, voluptatem cumque minus. Quisquam, quidem.</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto animi non, provident nisi quo numquam nesciunt harum voluptates minima totam nihil deleniti repellendus ipsum velit. Nemo maxime, rerum harum!</p>
 				<p>Qui omnis aut autem delectus ducimus assumenda, reiciendis cupiditate, veritatis et, distinctio corrupti voluptates non natus voluptate, expedita consequuntur. Maxime fugit earum dolores, consectetur autem animi accusamus possimus ducimus distinctio!</p>
@@ -68,7 +80,7 @@
 		</section>
 		<section class="section" id="galeria">
 			<div class="container">
-				<h2>Galeria</h2>
+				<h1>Galeria</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum autem enim ab voluptatibus similique quam esse, fugit consectetur, dicta, dolorum libero tempora. Accusantium molestiae qui, voluptatem cumque minus. Quisquam, quidem.</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto animi non, provident nisi quo numquam nesciunt harum voluptates minima totam nihil deleniti repellendus ipsum velit. Nemo maxime, rerum harum!</p>
 				<p>Qui omnis aut autem delectus ducimus assumenda, reiciendis cupiditate, veritatis et, distinctio corrupti voluptates non natus voluptate, expedita consequuntur. Maxime fugit earum dolores, consectetur autem animi accusamus possimus ducimus distinctio!</p>
@@ -77,7 +89,7 @@
 		</section>
 		<section class="section" id="dojazd">
 			<div class="container">
-				<h2>Dojazd</h2>
+				<h1>Dojazd</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum autem enim ab voluptatibus similique quam esse, fugit consectetur, dicta, dolorum libero tempora. Accusantium molestiae qui, voluptatem cumque minus. Quisquam, quidem.</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto animi non, provident nisi quo numquam nesciunt harum voluptates minima totam nihil deleniti repellendus ipsum velit. Nemo maxime, rerum harum!</p>
 				<p>Qui omnis aut autem delectus ducimus assumenda, reiciendis cupiditate, veritatis et, distinctio corrupti voluptates non natus voluptate, expedita consequuntur. Maxime fugit earum dolores, consectetur autem animi accusamus possimus ducimus distinctio!</p>
@@ -89,6 +101,7 @@
 		</footer>
 		<script src="jquery.js"></script>
 		<script src="stickyfill.js"></script>
+		<script src="scirpt.js"></script>
 		<script>
 			$('.nav').Stickyfill();
 
@@ -105,12 +118,6 @@
 			      }
 			    }
 			  });
-			});
-			const menuicon = document.querySelector
-			(".hamburger");
-			const navbar = document.querySelector(".menu");
-			menuicon.addEventListener("click", () => {
-    		navbar.classList.toggle("change");
 			});
 		</script>
 	</body>
