--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
 		<meta charset="UTF-8">
 		<title>Forest Camp</title>
 		<link rel="stylesheet" href="style.css">
+		<link rel="shortcut icon" href="/imgs/ikonka.jpg">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+	
 	</head>
 	<body>
 		<div class="menu">
 			<ul>
 				<li class="item"><a class="link" href="#about">O nas</a></li>
 				<li class="item"><a class="link" href="#cennik">Ceniik</a></li>
+				<li class="item"><a class="link" href="#galeria">Galeria</a></li>
 				<li class="item"><a class="link" href="#kontakt">Kontakt</a></li>
 				<li class="item"><a class="link" href="#regulamin">Regulamin</a></li>
-				<li class="item"><a class="link" href="#galeria">Galeria</a></li>
 				<li class="item"><a class="link" href="#dojazd">Dojazd</a></li>
 			</ul>
 			<nav class="nav">
-				<b><span id="txt1">FOREST CAMP</span></b>
+				<a href="#index"><b><span id="txt1">FOREST CAMP</span></b></a>
 				<b><a href=""><span id="txt2">Kontakt</span></a></b>
 				<a href=""><img src="/imgs/instagram.png" alt="insta" class="inst"></a>
 				<a href=""><img src="/imgs/fb.png" alt="fb" class="fb"></a>
@@ -30,10 +33,10 @@
 	
 			</nav>
 		</div>
-		<header class="header">
+		<header class="header" id="index">
 			<div class="container">
 				<h1>FOREST CAMP</h1>
-				<h2>WKRA&SPA</h2> <br>
+				<h2>WKRA&SPA <-- tu bedzie logo ale trzeba je poprawic</h2> <br>
 				<!-- <img src="/imgs/banner.png" alt="logo" width="600px">-->
 				<p>Widok na Wkrę z balii lub sauny, możesz to zobaczyć na własne oczy, wystarczy, że zarezerwujesz termin…</p>
 				<a href="#about"><span id="ik" class="material-symbols-outlined">
@@ -45,10 +48,12 @@
 		<section class="section" id="about">
 			<div class="container">
 				<h1>O nas</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum autem enim ab voluptatibus similique quam esse, fugit consectetur, dicta, dolorum libero tempora. Accusantium molestiae qui, voluptatem cumque minus. Quisquam, quidem.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam eius nesciunt iure, voluptate neque ducimus conconsectetur adipisicing elit. Totam eius nesciunt iure, voluptate neque ducimus conconsectetur adaxime vitae quisquam!</p>
-				<p>Labore hic, veniam itaque ex incidunt odio voluptate cupiditate numquam adipisci perferendis dignissimos aspernatur necessitatibus fuga laborum eos? Voluptatibus, nemo, aliquam. Nemo odio quidem velit animi magnam, molestias deleniti tenetur.</p>
-				<p>Omnis aliquam nam, laboriosam reprehenderit temporibus nobis nostrum dolorem fugiat maiores dicta fugit eos esse magni laborum officia corrupti nisi a voluptatum, exercitationem recusandae mollitia? Quaerat rem amet, quod necessitatibus?</p>
+				<p>Szukasz CISZY…. I SPOKOJU?</p>
+				<p>Hmmm… na co dzień żyjesz w biegu?</p>
+				<p>Chciałbyś po prostu zostawić wszystko i znaleźć się w miejscu, w którym jesteś tylko Ty i spokój?
+				Zapewne masz teraz zamknięte oczy i marzysz… zerknij niżej, o tak na to zdjęcie… co czujesz? Świeże powietrze ? Szum wiatru? Zapach rzeki? Śpiew ptaków? … tak, dokładnie to, a nawet więcej usłyszysz relaksując się w naszej balii, saunie, czy nawet spacerując nad rzeką. 
+				Nie czekaj, nie odkładaj siebie na jutro… spraw sobie przyjemność </p>
+		
 			</div>
 		</section>
 		<section class="section" id="cennik">
@@ -60,40 +65,41 @@
 				<p>Porro dicta eius, ea quas consequuntur. Quia enim deserunt aut ipsa ratione quis, quibusdam optio amet fugiat itaque inventore ipsam expedita, rem ab omnis. At voluptatum hic eum consequuntur omnis.</p>
 			</div>
 		</section>
-		<section class="section" id="kontakt">
+		<section class="section" id="galeria">
 			<div class="container">
-				<h1>Kontakt</h1>
+				<h1>Galeria</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum autem enim ab voluptatibus similique quam esse, fugit consectetur, dicta, dolorum libero tempora. Accusantium molestiae qui, voluptatem cumque minus. Quisquam, quidem.</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil in, reiciendis alias! Esse consectetur quibusdam, dicta dolorum vero totam mollitia, impedit soluta? Excepturi commodi debitis amet, possimus in illum ea?</p>
 				<p>Quaerat doloribus officia magni at quas aspernatur, omnis deserunt, ab debitis, placeat totam similique necessitatibus ducimus eligendi porro quis quibusdam. Corporis recusandae doloribus officia similique assumenda et a. Optio, est?</p>
 				<p>Deserunt voluptas recusandae fugiat ea ad, aperiam vel nisi quidem id! Itaque architecto facere laboriosam, dolorum hic tempore explicabo consequatur quia harum inventore, natus. Placeat, voluptatem doloribus vitae sunt asperiores!</p>
 			</div>
 		</section>
-		<section class="section" id="regulamin">
+		<section class="section" id="kontakt">
 			<div class="container">
-				<h1>Regulamin</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum autem enim ab voluptatibus similique quam esse, fugit consectetur, dicta, dolorum libero tempora. Accusantium molestiae qui, voluptatem cumque minus. Quisquam, quidem.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto animi non, provident nisi quo numquam nesciunt harum voluptates minima totam nihil deleniti repellendus ipsum velit. Nemo maxime, rerum harum!</p>
-				<p>Qui omnis aut autem delectus ducimus assumenda, reiciendis cupiditate, veritatis et, distinctio corrupti voluptates non natus voluptate, expedita consequuntur. Maxime fugit earum dolores, consectetur autem animi accusamus possimus ducimus distinctio!</p>
-				<p>Vero deleniti autem eos beatae mollitia sint possimus adipisci, velit eveniet maiores, pariatur obcaecati repudiandae voluptatibus asperiores temporibus molestias, consequatur est at fugiat laudantium enim optio! Laborum facere eaque illum.</p>
+				<h1>Kontakt</h1>
+				<div class="contact-info" >
+					<div class="card" id="test">
+					  <i class="card-icon far fa-envelope"></i>
+					  <p>jakis email</p>
+					</div>
+			  
+					<div class="card">
+					  <i class="card-icon fas fa-phone"></i>
+					  <p>+000000000000</p>
+					</div>
+			  
+					<div class="card">
+					  <i class="card-icon fas fa-map-marker-alt"></i>
+					  <p>Bieżany</p>
+					</div>
+				  </div>
 			</div>
-		</section>
-		<section class="section" id="galeria">
-			<div class="container">
-				<h1>Galeria</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum autem enim ab voluptatibus similique quam esse, fugit consectetur, dicta, dolorum libero tempora. Accusantium molestiae qui, voluptatem cumque minus. Quisquam, quidem.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto animi non, provident nisi quo numquam nesciunt harum voluptates minima totam nihil deleniti repellendus ipsum velit. Nemo maxime, rerum harum!</p>
-				<p>Qui omnis aut autem delectus ducimus assumenda, reiciendis cupiditate, veritatis et, distinctio corrupti voluptates non natus voluptate, expedita consequuntur. Maxime fugit earum dolores, consectetur autem animi accusamus possimus ducimus distinctio!</p>
-				<p>Vero deleniti autem eos beatae mollitia sint possimus adipisci, velit eveniet maiores, pariatur obcaecati repudiandae voluptatibus asperiores temporibus molestias, consequatur est at fugiat laudantium enim optio! Laborum facere eaque illum.</p>
-			</div>
+			<br><br><br>
 		</section>
 		<section class="section" id="dojazd">
 			<div class="container">
 				<h1>Dojazd</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum autem enim ab voluptatibus similique quam esse, fugit consectetur, dicta, dolorum libero tempora. Accusantium molestiae qui, voluptatem cumque minus. Quisquam, quidem.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto animi non, provident nisi quo numquam nesciunt harum voluptates minima totam nihil deleniti repellendus ipsum velit. Nemo maxime, rerum harum!</p>
-				<p>Qui omnis aut autem delectus ducimus assumenda, reiciendis cupiditate, veritatis et, distinctio corrupti voluptates non natus voluptate, expedita consequuntur. Maxime fugit earum dolores, consectetur autem animi accusamus possimus ducimus distinctio!</p>
-				<p>Vero deleniti autem eos beatae mollitia sint possimus adipisci, velit eveniet maiores, pariatur obcaecati repudiandae voluptatibus asperiores temporibus molestias, consequatur est at fugiat laudantium enim optio! Laborum facere eaque illum.</p>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5720.007253450419!2d20.15798281523248!3d52.93102496247057!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471c4904d49f48ef%3A0x86d3da14a1fac0bd!2sAgro-Kajak%20Bie%C5%BCany!5e0!3m2!1spl!2spl!4v1656809307210!5m2!1spl!2spl" width="1200" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 			</div>
 		</section>
 		<footer class="footer">
