--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 		<section class="section" id="dojazd">
 			<div class="container">
 				<h1>Dojazd</h1>
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5720.007253450419!2d20.15798281523248!3d52.93102496247057!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471c4904d49f48ef%3A0x86d3da14a1fac0bd!2sAgro-Kajak%20Bie%C5%BCany!5e0!3m2!1spl!2spl!4v1656809307210!5m2!1spl!2spl" maxwidth="1200px" width="1200px" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5720.007253450419!2d20.15798281523248!3d52.93102496247057!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471c4904d49f48ef%3A0x86d3da14a1fac0bd!2sAgro-Kajak%20Bie%C5%BCany!5e0!3m2!1spl!2spl!4v1656809307210!5m2!1spl!2spl" maxwidth="1200" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 			</div>
 		</section>
 		<footer class="footer">
