update v3 - dodanie html dla regulaminu

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 				<li class="item"><a class="link" href="#cennik">Ceniik</a></li>
 				<li class="item"><a class="link" href="#galeria">Galeria</a></li>
 				<li class="item"><a class="link" href="#kontakt">Kontakt</a></li>
-				<li class="item"><a class="link" href="#regulamin">Regulamin</a></li>
+				<li class="item"><a class="link" href="regulamin.html">Regulamin</a></li>
 				<li class="item"><a class="link" href="#dojazd">Dojazd</a></li>
 			</ul>
 			<nav class="nav">
 				<a href="#index"><b><span id="txt1">FOREST CAMP</span></b></a>
-				<b><a href=""><span id="txt2">Kontakt</span></a></b>
+				<b><a href="#kontakt"><span id="txt2">Kontakt</span></a></b>
 				<a href=""><img src="/imgs/instagram.png" alt="insta" class="inst"></a>
-				<a href=""><img src="/imgs/fb.png" alt="fb" class="fb"></a>
+				<a href="https://www.facebook.com/forestcampnyklewicz"><img src="/imgs/fb.png" alt="fb" class="fb"></a>
 
 				<div class="hamburger">
 					<div class="line line1"></div>
