--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 			<nav class="nav">
 				<a href="#index"><b><span id="txt1">FOREST CAMP</span></b></a>
 				<b><a href="#kontakt"><span id="txt2">Kontakt</span></a></b>
-				<a href=""><img src="/imgs/instagram.png" alt="insta" class="inst"></a>
 				<a href="https://www.facebook.com/forestcampnyklewicz"><img src="/imgs/fb.png" alt="fb" class="fb"></a>
 
 				<div class="hamburger">
@@ -35,9 +34,7 @@
 		</div>
 		<header class="header" id="index">
 			<div class="container">
-				<h1>FOREST CAMP</h1>
-				<h2>WKRA&SPA <-- tu bedzie logo ale trzeba je poprawic</h2> <br>
-				<!-- <img src="/imgs/banner.png" alt="logo" width="600px">-->
+				<img src="/imgs/banner.png" alt="logo" width="500px">
 				<p>Widok na Wkrę z balii lub sauny, możesz to zobaczyć na własne oczy, wystarczy, że zarezerwujesz termin…</p>
 				<a href="#about"><span id="ik" class="material-symbols-outlined">
 					keyboard_double_arrow_down
@@ -99,6 +96,7 @@
 		<section class="section" id="dojazd">
 			<div class="container">
 				<h1>Dojazd</h1>
+				<p>Należy dojechać do miejscowości Bieżany 9 gm. Radzanów powiat Mława <br>Znajdujemy się w odległości około 110km od Warszawy, 42km od Ciechanowa, 32 km od Mławy, 12km od Strzegowa, 7km od Radzanowa.</p>
 				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5720.007253450419!2d20.15798281523248!3d52.93102496247057!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471c4904d49f48ef%3A0x86d3da14a1fac0bd!2sAgro-Kajak%20Bie%C5%BCany!5e0!3m2!1spl!2spl!4v1656809307210!5m2!1spl!2spl" maxwidth="1200" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 			</div>
 		</section>
