--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<li class="item"><a class="link" href="#dojazd">Dojazd</a></li>
 			</ul>
 			<nav class="nav">
-				<a href="#index"><b><span id="txt1">FOREST CAMP</span></b></a>
+				<a href="#index"><b><span id="txt1">SPA&WKRA</span></b></a>
 				<b><a href="#kontakt"><span id="txt2">Kontakt</span></a></b>
 				<a href="https://www.facebook.com/forestcampnyklewicz"><img src="/imgs/fb.png" alt="fb" class="fb"></a>
 
@@ -34,7 +34,7 @@
 		</div>
 		<header class="header" id="index">
 			<div class="container">
-				<img src="/imgs/banner.png" alt="logo" width="500px">
+				<h1>Forest Camp</h1>
 				<p>Widok na Wkrę z balii lub sauny, możesz to zobaczyć na własne oczy, wystarczy, że zarezerwujesz termin…</p>
 				<a href="#about"><span id="ik" class="material-symbols-outlined">
 					keyboard_double_arrow_down
