--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<li class="item"><a class="link" href="#dojazd">Dojazd</a></li>
 			</ul>
 			<nav class="nav">
-				<a href="#index"><b><span id="txt1">SPA&WKRA</span></b></a>
+				<a href="#index"><b><span id="txt1">FOREST CAMP SPA&WKRA</span></b></a>
 				<b><a href="#kontakt"><span id="txt2">Kontakt</span></a></b>
 				<a href="https://www.facebook.com/forestcampnyklewicz"><img src="/imgs/fb.png" alt="fb" class="fb"></a>
 
