--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<li class="item"><a class="link" href="#dojazd">Dojazd</a></li>
 			</ul>
 			<nav class="nav">
-				<a href="#index"><b><span id="txt1">FOREST CAMP SPA&WKRA</span></b></a>
+				<a href="#index"><b><span id="txt1">SPA&WKRA</span></b></a>
 				<b><a href="#kontakt"><span id="txt2">Kontakt</span></a></b>
 				<a href="https://www.facebook.com/forestcampnyklewicz"><img src="/imgs/fb.png" alt="fb" class="fb"></a>
 
@@ -73,36 +73,18 @@
 				<center><h1>Galeria</h1></center>
 				<div class="gallery-container">
 					<div class="gallery-item" data-index="1" id="zd1">
-						<img src="/imgs/header.jpg">
+						<img src="/zdj/13.jpg">
 					</div>
 					<div class="gallery-item" data-index="2">
-						<img src="/imgs/header1.jpg">
+						<img src="/zdj/32.jpg">
 					</div>
 					<div class="gallery-item" data-index="3">
-						<img src="/imgs/header3.jpg">
-					</div>
-					<div class="gallery-item" data-index="4">
-						<img src="/imgs/header4.jpg">
-					</div>
-					<div class="gallery-item" data-index="5">
-						<img src="/imgs/header.jpg">
-					</div>
-					<div class="gallery-item" data-index="6">
-						<img src="/imgs/header1.jpg">
-					</div>
-					<div class="gallery-item" data-index="7">
-						<img src="/imgs/header2.jpg">
-					</div>
-					<div class="gallery-item" data-index="8">
-						<img src="/imgs/header3.jpg">
-					</div>
-					<div class="gallery-item" data-index="9">
-						<img src="/imgs/header4.jpg">
+						<img src="/zdj/8.jpg">
 					</div>
 				</div>
-				<script type="text/javascript">
-				
-				</script>
+				<br>
+				<b><a href="galeria.html"><span id="txt22">Zobacz więcej</span></a></b>
+				<br>
 			</div>
 		</section>
 		<section class="section" id="kontakt">
