--- a/regulamin.html
+++ b/regulamin.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Forest Camp</title>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="style1.css">
 		<link rel="shortcut icon" href="/imgs/ikonka.jpg">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
@@ -32,16 +32,136 @@
 	
 			</nav>
 		</div>
-<br><br><br><br><br>
-		<section>
-                <center><h1>TU BEDZIE REGULAMIN</h1></center>
-		</section>
+		<div id="reg">
+			<h1><center>Regulamin</center></h1> <br><br>
+			<h2>Cykl saunowania, czyli jak korzystać z sauny</h2> <br>
+			<p>Usiądź na ręczniku, nastaw klepsydrę i odpręż się. 
+				Za pierwszym razem możesz być w saunie krótko, organizm musi się przyzwyczaić, ale postaraj się przeczekać „uderzenie ciepła”. Wygrzewaj się ostrożnie wsłuchując w swoje ciało, nie kieruj się klepsydrą. Każdy ma swoją wytrzymałość, nie kieruj się innymi.
+				Ręcznik bawełniany - do sauny ruskiej wchodzimy bez ubrań, owinięci w ręcznik bawełniany. Dla naszego zdrowia i higieny należy unikać sztucznych materiałów. 
+			</p> <br><br>
+			<div id="regg">
+			<h2>REGULAMIN KORZYSTANIA Z SAUNY SUCHEJ</h2> <br>
+			<ol>
+				<li>Przed wejściem do sauny należy zapoznać się z regulaminem.</li>
+				<li>Przed wejściem do sauny należy umyć ciało i wytrzeć się do sucha oraz zmienić obuwie na kąpielowe.</li>
+				<li>W saunie suchej należy używać własnego ręcznika w celu uniknięcia bezpośredniego kontaktu ciała z powierzchnią drewnianą.</li>
+				<li>Niedozwolone jest korzystanie z sauny w kolczykach, biżuterii, łańcuszkach, zegarkach, okularach i szkłach kontaktowych.</li>
+				<li>W saunie może przebywać jednocześnie maksymalnie 5 osób.</li>
+				<li>W czasie przebywania w saunie nie wolno smarować ciała i twarzy żadnymi kremami.</li>
+				<li>Z sauny suchej <b>NIE MOGĄ</b> korzystać osoby:
+					<ul>
+						<li>cierpiące na jakiekolwiek dolegliwości skórne i inne choroby
+							zgodnie z przeciwwskazaniami lekarza (przeziębienie, grypa, gorączka, grzybica, choroby skóry, ostra faza trądziku różowatego, nadciśnienie, żylaki, wrzody, niewydolność
+							nerek, choroby płuc, astma, choroby weneryczne, epilepsja, jaskra, daltonizm, choroby serca, schorzenia ostre i przewlekłe, tarczyca, nowotwory, guzy, ogniska zakaźne np. ból zęba) oraz kobiety w ciąży,
+						</li>
+						<li>osoby pod wpływem alkoholu lub innych środków odurzających,</li>
+						<li>osoby poniżej 18-go roku życia bez opiekuna.</li>
+					</ul></li>
+				<li>Dopuszczalna - ze względów bezpieczeństwa – temperatura dla ciała w saunie suchej, 
+					to 80°C.
+				</li>
+				<li>Po każdorazowym wyjściu z sauny należy się umyć i ochłodzić pod natryskiem dobierając odpowiednią dla siebie temperaturę wody. W przerwie i po zakończeniu pobytu w saunie
+					wskazany jest wypoczynek oraz uzupełnienie poziomu płynów w organizmie.
+				</li>
+				<li>Z sauny mogą korzystać osoby pełnoletnie, dzieci oraz młodzież pod nadzorem osób dorosłych</li>
+				<li>Osoby przebywające w saunie deklarują pełną zdolność fizyczną i zdrowotną do korzystania z tego typy zabiegów i ponoszą odpowiedzialność za stan swojego zdrowia.</li>
+				<li>W razie złego samopoczucia należy bezzwłocznie opuścić pomieszczenie.</li>
+				<li><b>Nie zaleca</b> się korzystania z sauny osobom:</li>
+					<ul>
+						<li>bezpośrednio po intensywnym treningu wytrzymałościowym,</li>
+						<li>osobom z chorobami krążenia,</li>
+						<li>osobom chorującym na cukrzycę,</li>
+						<li>osobom nietrzeźwym,</li>
+						<li>kobietom ciężarnym,</li>
+						<li>kobietom w czasie menstruacji.</li>
+					</ul>
+				<li>W saunie suchej należy siadać na ręczniku. Ręcznik powinien być rozłożony tak, aby żadna część ciała nie stykała się z powierzchnią siedziska.</li>
+				<li>W saunie należy siadać na ręczniku oraz trzymać na nim stopy. Ręcznik
+					powinien być rozłożony tak, aby żadna część ciała nie stykała się z
+					powierzchnią siedziska.
+				</li>
+				<li>Zobowiązuje się wszystkich użytkowników do przestrzegania regulaminu, zasad bezpieczeństwa oraz kulturalnego zachowania</li>
+				<li>Korzystanie z sauny jest równoznaczne z tym, że osoba zapoznała się i akceptuje wszystkie
+					powyższe punkty regulaminu.
+				</li>
+				<li>Pracownicy i właściciele obiektu nie odpowiadają za wypadki spowodowane
+					nieprzestrzeganiem niniejszego regulaminu
+					Po saunie należy wypocząć około 20-30 minut. Celowe jest picie wód mineralnych lub soków w umiarkowanych ilościach (około 0,5-1litra).
+				</li>
+			</ol><br>
+			<p>Po saunie należy wypocząć około 20-30 minut. Celowe jest picie wód mineralnych lub soków w umiarkowanych ilościach (około 0,5-1litra).</p>
+			<br><p>Przebywanie w saunie to nie tylko relaks i odpoczynek. Podczas przebywania w saunie temperatura naszego ciała się podnosi co ułatwia organizmowi radzenie sobie ze stanami zapalnymi oraz walkę z bakteriami, patogenami i wirusami. Po chwili zaczynamy się pocić, a wraz z potem pozbywamy się toksyn i zanieczyszczeń.</p>
+			<br><p>Zachęcam każdego, aby wybrać się do sauny “z prawdziwego zdarzenia” aby naprawdę poczuć, jak to jest. Niestety atmosfera w wielu saunach “przy basenowych” ma niewiele wspólnego z relaksem i odpoczynkiem.</p>
+			<br><p>Sauna ma bardzo pozytywny wpływ na nasze zdrowie i urodę, a także przeciwdziała starzeniu się organizmu. Pozytywny wpływ tradycyjnej sauny wynika z połączenia procesów przegrzania ciała poprzez oddziaływanie suchego i gorącego powietrza z okresową dużą wilgotnością oraz procesu ochładzania ciała.</p>
+			<br><p>Wysoka temperatura w saunie oczyszcza także nasz organizm z toksyn, które uchodzą z niego wraz z potem. Dodatkowo wysoka temperatura przynosi zbawienną ulgę przy zapaleniu ścięgien oraz nadwyrężeniu mięśni, jak również i w bólach reumatycznych i korzonkach.
+				Sauna pomoże nam również odzyskać formę po zwichnięciach stawów i złamaniach kości.
+				Sauna beczka, inaczej Ruska Bania opalana jest tradycyjnym piecem na drewno, który znajduje się wewnątrz sauny, dzięki czemu zapewniony mamy widok palącego się ognia. Wilgotność powietrza reguluje się polewając rozgrzane kamienie wodą.
+			</p>
+			<p>. Hartowanie i zapobieganie infekcjom
+				Ekstremalne zmiany temperatur hartują organizm. Następuje nagła mobilizacja układu odpornościowego, udowodnione jest, że osoby regularnie korzystające z sauny 10-krotnie rzadziej chorują na grypę i przeziębienia. Zatem nagłe zmiany temperatur są znakomitym sposobem hartowania organizmu, który w ten sposób uodparnia się na zmienne i nieprzyjazne warunki atmosferyczne.
+			</p><br>
+			<p>Wpływ sauny na krążenie
+				Przebywanie w saunie przyspiesza krążenie krwi, a naprzemienne rozgrzewanie i schładzanie organizmu wzmacnia naczynia krwionośne. Pobudzenie krwiobiegu – a to właśnie ma miejsce podczas korzystaniu z sauny – powoduje odżywianie i oczyszczanie komórek organizmu. Według wielu naukowców i lekarzy saunę można określić jako stabilizator ciśnienia: sauna podwyższa ciśnienie u tych, którzy mają zbyt niskie, a obniża u nadciśnieniowców. Osoby, które cierpią z powodu dolegliwości związanych z ciśnieniem czy sercem, powinny przed zabiegiem skonsultować się z lekarzem w celu określenia odpowiednich warunków i czasu przebywania w saunie (temperatura, wilgotność, ułożenie ciała, czas seansu).
+			</p><br>
+			<p>Czy sauna odchudza?
+				Sama w sobie sauna nie odchudza, jednak jej działanie na organizm może stymulować przemianę materii. Sauna bowiem wspomaga detoksykację organizmu i pomaga usunąć z niego namiar soli, która sprzyja opuchnięciom i obrzękom.  Poprzez pory skóry wydostaje się dużo toksyn i szkodliwych pierwiastków. Naukowcy ustalili, że korzystając z sauny przez jedną godzinę organizm wydziela wraz z potem tyle toksyn, ile zdrowe nerki w ciągu 24 godzin. 
+			</p><br>
+			<i style="color:red">Z badań przeprowadzonych na potrzeby amerykańskiej armii wynika, że podczas jednej sesji w saunie można spalić nawet 300 kalorii!</i>
+			<br><br><p><b>Zdrowotne właściwości sauny</b></p><br>
+			<p>Jakie korzyści płyną z relaksu w saunie? Jest ich wiele, oto kilka z nich:</p>
+			<ol>
+				<li>Gruczoły łojowe odblokowują się, a organizm pozbywa się nadmiaru sebum – dlatego sauna sprzyja osobom odchudzającym się, pomaga również w walce z cellulitem i niedoskonałościami skóry</li>
+				<li>Z organizmu wraz z potem wydalana jest nadmierna ilość soli, co zapobiega zatrzymywaniu wody i puchnięciu</li>
+				<li>Tkanki są lepiej ukrwione, a cera dotleniona </li>
+				<li>Skóra staje się gładka</li>
+				<li>Organizm wolniej się starzeje</li>
+				<li>Wydalamy nieczystości, metale ciężkie i toksyny</li>
+				<li>Dzięki wytwarzanej w saunie większej ilości endorfin jesteśmy bardziej zrelaksowane</li>
+				<li>Zastosowane po wyjściu z sauny kosmetyki lepiej się wchłaniają</li>
+				<li>Polepsza się krążenie krwi</li>
+				<li>Zmiany temperatur hartują organizm</li>
+				<li>Sauna przynosi ulgę przy zapaleniu ścięgien oraz nadwyrężeniu mięśni i pomaga odzyskać formę po zwichnięciach stawów i złamaniach kości</li>
+				<li>Ma korzystny wpływ na drogi oddechowe</li>
+				<li>Ma działanie uspokajające, pomaga przy problemach ze snem</li>
+				<li>Wycisza i relaksuje, odpręża, działa pozytywnie na kondycję psychiczną</li>
+			</ol> <br><br>
+			<h2>REGULAMIN KORZYSTANIA Z GORĄCEJ BECZKI</h2><br>
+			<ol>
+				<li>Przed wejściem do sauny należy zapoznać się z regulaminem.</li>
+				<li>Korzystanie z beczki jest dozwolone jedynie dla osób powyżej 16. roku życia. Dzieci mogą korzystać z niej na odpowiedzialność i pod opieką rodziców</li>
+				<li>Podczas korzystania z beczki należy bezwzględnie stosować się do instrukcji użytkowania, poleceń i informacji udzielanych przez gospodarzy lub pracowników.</li>
+				<li>Z beczki korzystać mogą jedynie osoby zdrowe lub osoby, których dolegliwości nie stanowią przeciwwskazań do korzystania z zabiegów. Wstępu do balii zabrania się w szczególności osobom:</li>
+				<ul>
+					<li>z chorobami serca, nadciśnieniem i chorobami naczyń krwionośnych,</li>
+					<li>z chorobami tarczycy, klaustrofobią, epilepsją, ostrymi stanami reumatycznymi,</li>
+					<li>z nowotworami, ostrymi infekcjami i stanami astmatycznymi,</li>
+					<li>z podwyższoną temperaturą ciała,</li>
+					<li>kobietom w czasie menstruacji i w okresie ciąży,</li>
+					<li>zmęczonym, pod wpływem alkoholu i środków odurzających.</li>
+				</ul>
+				<li>Wchodząc do balii korzystający potwierdza, że jego stan zdrowia pozwala na taką formę rekreacji. Za szkody, w tym skutki zdrowotne przebywania w balii nie ponosimy odpowiedzialności.</li>
+				<li>Przed wejściem do balii należy:</li>
+				<ul>
+					<li>zdjąć wszystkie przedmioty metalowe,</li>
+					<li>zdjąć okulary i szkła kontaktowe,</li>
+					<li>dokładnie umyć całe ciało pod prysznicem mydłem, a następnie wytrzeć do sucha,</li>
+					<li>zdjąć obuwie.</li>
+				</ul>
+				<li>Zabrania się kładzenia jakichkolwiek przedmiotów (ręczników, szlafroków itp.) na piecu lub w jego pobliżu.</li>
+				<li>Pierwszym rozpaleniem ognia w piecu beczce mogą zajmować się jedynie nasi pracownicy. Podczas korzystania z beczki nie wolno stosować żadnych płynów, esencji, olejków czy innych substancji.</li>
+				<li>Nie należy dotykać elementów pieca w beczce, tych wystających na powierzchni ani tych zanurzonych w wodzie – mogą być bardzo gorące!</li>
+				<li>Przebywanie w rozgrzanej Gorącej Balii przez dłuższy czas powoduje wzrost temperatury ciała, co może być niebezpieczne dla zdrowia</li>
+				<li>W Gorącej Balii i przy niej należy poruszać się bardzo ostrożnie, gdyż Balia i schodki mogą być śliskie.</li>
+				<li>Po zakończeniu seansu każdorazowo należy informować o Gospodarzy o zakończeniu seansu</li>
+			</ol>
+		</div>
+		</div>
 		<footer class="footer">
 			<p></p>
 		</footer>
 		<script src="jquery.js"></script>
 		<script src="stickyfill.js"></script>
-		<script src="scirpt.js"></script>
+		<script src="scirpt1.js"></script>
 		<script>
 			$('.nav').Stickyfill();
 
