--- a/galeria.html
+++ b/galeria.html
@@ -7,7 +7,9 @@
 		<link rel="shortcut icon" href="/imgs/ikonka.jpg">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
-	
+		<link rel="stylesheet" type="text/css" href="style1.css">
+		<link rel="stylesheet" type="text/css" href="lightbox.min.css">
+		<script src="lightbox-plus-jquery.min.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<div class="menu">
@@ -32,13 +34,47 @@
 	
 			</nav>
 		</div>
-
+		<div class="gallery">
+			<a href="./zdj/1.JPG" data-lightbox='mygallery' data-title="Deer"><img src="./zdj/1.JPG"></a>
+			<a href="./zdj/2.JPG" data-lightbox='mygallery'><img src="./zdj/2.JPG"></a>
+			<a href="./zdj/4.JPG" data-lightbox='mygallery'><img src="./zdj/4.JPG"></a>
+			<a href="./zdj/5.JPG" data-lightbox='mygallery'><img src="./zdj/5.JPG"></a>
+			<a href="./zdj/31.JPG" data-lightbox='mygallery'><img src="./zdj/31.JPG"></a>
+			<a href="./zdj/7.JPG" data-lightbox='mygallery'><img src="./zdj/71.JPG"></a>
+			<a href="./zdj/8.JPG" data-lightbox='mygallery'><img src="./zdj/8.JPG"></a>
+			<a href="./zdj/9.JPG" data-lightbox='mygallery'><img src="./zdj/9.JPG"></a>
+			<a href="./zdj/32.JPG" data-lightbox='mygallery'><img src="./zdj/32.JPG"></a>
+			<a href="./zdj/11.JPG" data-lightbox='mygallery' data-title="Deer"><img src="./zdj/11.JPG"></a>
+			<a href="./zdj/13.JPG" data-lightbox='mygallery'><img src="./zdj/13.JPG"></a>
+			<a href="./zdj/14.JPG" data-lightbox='mygallery'><img src="./zdj/14.JPG"></a>
+			<a href="./zdj/15.JPG" data-lightbox='mygallery'><img src="./zdj/151.JPG"></a>
+			<a href="./zdj/16.JPG" data-lightbox='mygallery'><img src="./zdj/16.JPG"></a>
+			<a href="./zdj/17.JPG" data-lightbox='mygallery'><img src="./zdj/17.JPG"></a>
+			<a href="./zdj/18.JPG" data-lightbox='mygallery'><img src="./zdj/18.JPG"></a>
+			<a href="./zdj/19.JPG" data-lightbox='mygallery'><img src="./zdj/19.JPG"></a>
+			<a href="./zdj/20.JPG" data-lightbox='mygallery'><img src="./zdj/20.JPG"></a>
+			<a href="./zdj/21.JPG" data-lightbox='mygallery'><img src="./zdj/21.JPG"></a>
+			<a href="./zdj/22.JPG" data-lightbox='mygallery'><img src="./zdj/22.JPG"></a>
+			<a href="./zdj/23.JPG" data-lightbox='mygallery'><img src="./zdj/23.JPG"></a>
+			<a href="./zdj/24.JPG" data-lightbox='mygallery'><img src="./zdj/24.JPG"></a>
+			<a href="./zdj/25.JPG" data-lightbox='mygallery'><img src="./zdj/25.JPG"></a>
+			<a href="./zdj/26.JPG" data-lightbox='mygallery'><img src="./zdj/261.JPG"></a>
+			<a href="./zdj/27.JPG" data-lightbox='mygallery'><img src="./zdj/27.JPG"></a>
+			<a href="./zdj/28.JPG" data-lightbox='mygallery'><img src="./zdj/28.JPG"></a>
+			<a href="./zdj/29.JPG" data-lightbox='mygallery'><img src="./zdj/29.JPG"></a>
+			<a href="./zdj/30.JPG" data-lightbox='mygallery'><img src="./zdj/30.JPG"></a>
+			<a href="./zdj/33.JPG" data-lightbox='mygallery'><img src="./zdj/33.JPG"></a>
+			<a href="./zdj/34.JPG" data-lightbox='mygallery'><img src="./zdj/34.JPG"></a>
+			<a href="./zdj/35.JPG" data-lightbox='mygallery'><img src="./zdj/35.JPG"></a>
+			<a href="./zdj/36.JPG" data-lightbox='mygallery'><img src="./zdj/36.JPG"></a>
+			<a href="./zdj/37.JPG" data-lightbox='mygallery'><img src="./zdj/371.JPG"></a>
+		</div>
 		<footer class="footer">
 			<p></p>
 		</footer>
 		<script src="jquery.js"></script>
 		<script src="stickyfill.js"></script>
-		<script src="scirpt1.js"></script>
+		<script src="scirpt.js"></script>
 		<script>
 			$('.nav').Stickyfill();
 
