--- a/regulamin.html
+++ b/regulamin.html
@@ -157,7 +157,7 @@
 		</div>
 		</div>
 		<footer class="footer">
-			<p></p>
+			<p>ForestCamp</p>
 		</footer>
 		<script src="jquery.js"></script>
 		<script src="stickyfill.js"></script>
